// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`er-artist can parse and handle bindClass 1`] = `
{
  "mark": {
    "attrs": {},
    "children": [
      {
        "children": [],
        "class": "er__relations",
        "type": "group",
      },
      {
        "attrs": {
          "id": "e1",
        },
        "children": [
          {
            "attrs": {
              "fill": "#fdb05e",
              "radius": 2,
              "stroke": "#3b4044",
              "text": "",
            },
            "class": "er__entity-box",
            "type": "rect",
          },
          {
            "attrs": {
              "fill": "#3b4044",
              "fontFamily": "Source Code Pro, sans-serif",
              "fontSize": 14,
              "fontStyle": "normal",
              "fontWeight": "bold",
              "id": "entity-e1",
              "text": "e1",
              "textAlign": "center",
              "textBaseline": "middle",
            },
            "class": "er__entity-label",
            "type": "text",
          },
          {
            "attrs": {},
            "children": [
              {
                "attrs": {},
                "children": [
                  {
                    "attrs": {
                      "fill": "#fffbf9",
                      "stroke": "#3b4044",
                    },
                    "type": "rect",
                  },
                  {
                    "attrs": {
                      "fill": "#3b4044",
                      "fontFamily": "Source Code Pro, sans-serif",
                      "fontSize": 11.9,
                      "fontStyle": "normal",
                      "fontWeight": "normal",
                      "id": "entity-e1-attr-1-type",
                      "text": "int",
                      "textAlign": "left",
                      "textBaseline": "middle",
                    },
                    "class": "er__entity-label",
                    "type": "text",
                  },
                  {
                    "attrs": {
                      "fill": "#fffbf9",
                      "stroke": "#3b4044",
                    },
                    "type": "rect",
                  },
                  {
                    "attrs": {
                      "fill": "#3b4044",
                      "fontFamily": "Source Code Pro, sans-serif",
                      "fontSize": 11.9,
                      "fontStyle": "normal",
                      "fontWeight": "normal",
                      "id": "entity-e1-attr-1-name",
                      "text": "age",
                      "textAlign": "left",
                      "textBaseline": "middle",
                    },
                    "class": "er__entity-label",
                    "type": "text",
                  },
                ],
                "type": "group",
              },
            ],
            "type": "group",
          },
        ],
        "class": "er__entity test-class",
        "itemId": "entity-e1",
        "type": "group",
      },
      {
        "attrs": {
          "id": "e2",
        },
        "children": [
          {
            "attrs": {
              "fill": "#fdb05e",
              "radius": 2,
              "stroke": "#3b4044",
              "text": "",
            },
            "class": "er__entity-box",
            "type": "rect",
          },
          {
            "attrs": {
              "fill": "#3b4044",
              "fontFamily": "Source Code Pro, sans-serif",
              "fontSize": 14,
              "fontStyle": "normal",
              "fontWeight": "bold",
              "id": "entity-e2",
              "text": "e2",
              "textAlign": "center",
              "textBaseline": "middle",
            },
            "class": "er__entity-label",
            "type": "text",
          },
          {
            "attrs": {},
            "children": [
              {
                "attrs": {},
                "children": [
                  {
                    "attrs": {
                      "fill": "#fffbf9",
                      "stroke": "#3b4044",
                    },
                    "type": "rect",
                  },
                  {
                    "attrs": {
                      "fill": "#3b4044",
                      "fontFamily": "Source Code Pro, sans-serif",
                      "fontSize": 11.9,
                      "fontStyle": "normal",
                      "fontWeight": "normal",
                      "id": "entity-e2-attr-1-type",
                      "text": "string",
                      "textAlign": "left",
                      "textBaseline": "middle",
                    },
                    "class": "er__entity-label",
                    "type": "text",
                  },
                  {
                    "attrs": {
                      "fill": "#fffbf9",
                      "stroke": "#3b4044",
                    },
                    "type": "rect",
                  },
                  {
                    "attrs": {
                      "fill": "#3b4044",
                      "fontFamily": "Source Code Pro, sans-serif",
                      "fontSize": 11.9,
                      "fontStyle": "normal",
                      "fontWeight": "normal",
                      "id": "entity-e2-attr-1-name",
                      "text": "name",
                      "textAlign": "left",
                      "textBaseline": "middle",
                    },
                    "class": "er__entity-label",
                    "type": "text",
                  },
                ],
                "type": "group",
              },
            ],
            "type": "group",
          },
        ],
        "class": "er__entity",
        "itemId": "entity-e2",
        "type": "group",
      },
      {
        "attrs": {},
        "children": [],
        "type": "group",
      },
    ],
    "type": "group",
  },
}
`;

exports[`er-artist will draw inheritance 1`] = `
{
  "mark": {
    "attrs": {},
    "children": [
      {
        "children": [],
        "class": "er__relations",
        "type": "group",
      },
      {
        "attrs": {
          "id": "person",
        },
        "children": [
          {
            "attrs": {
              "fill": "#fdb05e",
              "radius": 2,
              "stroke": "#3b4044",
              "text": "",
            },
            "class": "er__entity-box",
            "type": "rect",
          },
          {
            "attrs": {
              "fill": "#3b4044",
              "fontFamily": "Source Code Pro, sans-serif",
              "fontSize": 14,
              "fontStyle": "normal",
              "fontWeight": "bold",
              "id": "entity-person",
              "text": "person",
              "textAlign": "center",
              "textBaseline": "middle",
            },
            "class": "er__entity-label",
            "type": "text",
          },
          {
            "attrs": {},
            "children": [
              {
                "attrs": {},
                "children": [
                  {
                    "attrs": {
                      "fill": "#fffbf9",
                      "stroke": "#3b4044",
                    },
                    "type": "rect",
                  },
                  {
                    "attrs": {
                      "fill": "#3b4044",
                      "fontFamily": "Source Code Pro, sans-serif",
                      "fontSize": 11.9,
                      "fontStyle": "normal",
                      "fontWeight": "normal",
                      "id": "entity-person-attr-1-type",
                      "text": "int",
                      "textAlign": "left",
                      "textBaseline": "middle",
                    },
                    "class": "er__entity-label",
                    "type": "text",
                  },
                  {
                    "attrs": {
                      "fill": "#fffbf9",
                      "stroke": "#3b4044",
                    },
                    "type": "rect",
                  },
                  {
                    "attrs": {
                      "fill": "#3b4044",
                      "fontFamily": "Source Code Pro, sans-serif",
                      "fontSize": 11.9,
                      "fontStyle": "normal",
                      "fontWeight": "normal",
                      "id": "entity-person-attr-1-name",
                      "text": "age",
                      "textAlign": "left",
                      "textBaseline": "middle",
                    },
                    "class": "er__entity-label",
                    "type": "text",
                  },
                ],
                "type": "group",
              },
              {
                "attrs": {},
                "children": [
                  {
                    "attrs": {
                      "fill": "#fffbf9",
                      "stroke": "#3b4044",
                    },
                    "type": "rect",
                  },
                  {
                    "attrs": {
                      "fill": "#3b4044",
                      "fontFamily": "Source Code Pro, sans-serif",
                      "fontSize": 11.9,
                      "fontStyle": "normal",
                      "fontWeight": "normal",
                      "id": "entity-person-attr-2-type",
                      "text": "string",
                      "textAlign": "left",
                      "textBaseline": "middle",
                    },
                    "class": "er__entity-label",
                    "type": "text",
                  },
                  {
                    "attrs": {
                      "fill": "#fffbf9",
                      "stroke": "#3b4044",
                    },
                    "type": "rect",
                  },
                  {
                    "attrs": {
                      "fill": "#3b4044",
                      "fontFamily": "Source Code Pro, sans-serif",
                      "fontSize": 11.9,
                      "fontStyle": "normal",
                      "fontWeight": "normal",
                      "id": "entity-person-attr-2-name",
                      "text": "phone_number",
                      "textAlign": "left",
                      "textBaseline": "middle",
                    },
                    "class": "er__entity-label",
                    "type": "text",
                  },
                ],
                "type": "group",
              },
            ],
            "type": "group",
          },
        ],
        "class": "er__entity",
        "itemId": "entity-person",
        "type": "group",
      },
      {
        "attrs": {
          "id": "customer",
        },
        "children": [
          {
            "attrs": {
              "fill": "#fdb05e",
              "radius": 2,
              "stroke": "#3b4044",
              "text": "",
            },
            "class": "er__entity-box",
            "type": "rect",
          },
          {
            "attrs": {
              "fill": "#3b4044",
              "fontFamily": "Source Code Pro, sans-serif",
              "fontSize": 14,
              "fontStyle": "normal",
              "fontWeight": "bold",
              "id": "entity-customer",
              "text": "customer",
              "textAlign": "center",
              "textBaseline": "middle",
            },
            "class": "er__entity-label",
            "type": "text",
          },
          {
            "attrs": {},
            "children": [
              {
                "attrs": {},
                "children": [
                  {
                    "attrs": {
                      "fill": "#fffbf9",
                      "stroke": "#3b4044",
                    },
                    "type": "rect",
                  },
                  {
                    "attrs": {
                      "fill": "#fffbf9",
                      "stroke": "#3b4044",
                    },
                    "type": "rect",
                  },
                  {
                    "attrs": {
                      "fill": "#3b4044",
                      "fontFamily": "Source Code Pro, sans-serif",
                      "fontSize": 11.9,
                      "fontStyle": "normal",
                      "fontWeight": "normal",
                      "id": "entity-customer-attr-1-type",
                      "text": "string",
                      "textAlign": "left",
                      "textBaseline": "middle",
                    },
                    "class": "er__entity-label",
                    "type": "text",
                  },
                  {
                    "attrs": {
                      "fill": "#fffbf9",
                      "stroke": "#3b4044",
                    },
                    "type": "rect",
                  },
                  {
                    "attrs": {
                      "fill": "#3b4044",
                      "fontFamily": "Source Code Pro, sans-serif",
                      "fontSize": 11.9,
                      "fontStyle": "normal",
                      "fontWeight": "normal",
                      "id": "entity-customer-attr-1-name",
                      "text": "address",
                      "textAlign": "left",
                      "textBaseline": "middle",
                    },
                    "class": "er__entity-label",
                    "type": "text",
                  },
                  {
                    "attrs": {
                      "fill": "#fffbf9",
                      "stroke": "#3b4044",
                    },
                    "type": "rect",
                  },
                  {
                    "attrs": {
                      "fill": "#3b4044",
                      "fontFamily": "Source Code Pro, sans-serif",
                      "fontSize": 11.9,
                      "fontStyle": "normal",
                      "fontWeight": "normal",
                      "id": "entity-customer-attr-1-name",
                      "text": "deliver address",
                      "textAlign": "left",
                      "textBaseline": "middle",
                    },
                    "class": "er__entity-label",
                    "type": "text",
                  },
                ],
                "type": "group",
              },
              {
                "attrs": {},
                "children": [
                  {
                    "attrs": {
                      "fill": "#fffbf9",
                      "stroke": "#3b4044",
                    },
                    "type": "rect",
                  },
                  {
                    "attrs": {
                      "fill": "#3b4044",
                      "fontFamily": "Source Code Pro, sans-serif",
                      "fontSize": 11.9,
                      "fontStyle": "normal",
                      "fontWeight": "normal",
                      "id": "entity-customer-attr-2-key",
                      "text": "PK",
                      "textAlign": "left",
                      "textBaseline": "middle",
                    },
                    "class": "er__entity-label",
                    "type": "text",
                  },
                  {
                    "attrs": {
                      "fill": "#fffbf9",
                      "stroke": "#3b4044",
                    },
                    "type": "rect",
                  },
                  {
                    "attrs": {
                      "fill": "#3b4044",
                      "fontFamily": "Source Code Pro, sans-serif",
                      "fontSize": 11.9,
                      "fontStyle": "normal",
                      "fontWeight": "normal",
                      "id": "entity-customer-attr-2-type",
                      "text": "string",
                      "textAlign": "left",
                      "textBaseline": "middle",
                    },
                    "class": "er__entity-label",
                    "type": "text",
                  },
                  {
                    "attrs": {
                      "fill": "#fffbf9",
                      "stroke": "#3b4044",
                    },
                    "type": "rect",
                  },
                  {
                    "attrs": {
                      "fill": "#3b4044",
                      "fontFamily": "Source Code Pro, sans-serif",
                      "fontSize": 11.9,
                      "fontStyle": "normal",
                      "fontWeight": "normal",
                      "id": "entity-customer-attr-2-name",
                      "text": "id",
                      "textAlign": "left",
                      "textBaseline": "middle",
                    },
                    "class": "er__entity-label",
                    "type": "text",
                  },
                  {
                    "attrs": {
                      "fill": "#fffbf9",
                      "stroke": "#3b4044",
                    },
                    "type": "rect",
                  },
                ],
                "type": "group",
              },
            ],
            "type": "group",
          },
        ],
        "class": "er__entity",
        "itemId": "entity-customer",
        "type": "group",
      },
      {
        "attrs": {
          "id": "deliverer",
        },
        "children": [
          {
            "attrs": {
              "fill": "#fdb05e",
              "radius": 2,
              "stroke": "#3b4044",
              "text": "",
            },
            "class": "er__entity-box",
            "type": "rect",
          },
          {
            "attrs": {
              "fill": "#3b4044",
              "fontFamily": "Source Code Pro, sans-serif",
              "fontSize": 14,
              "fontStyle": "normal",
              "fontWeight": "bold",
              "id": "entity-deliverer",
              "text": "deliverer",
              "textAlign": "center",
              "textBaseline": "middle",
            },
            "class": "er__entity-label",
            "type": "text",
          },
          {
            "attrs": {},
            "children": [],
            "type": "group",
          },
        ],
        "class": "er__entity",
        "itemId": "entity-deliverer",
        "type": "group",
      },
      {
        "attrs": {},
        "children": [
          {
            "attrs": {
              "fill": "#fffbf9",
              "lineJoin": "round",
              "stroke": "#3b4044",
            },
            "type": "path",
          },
          {
            "attrs": {
              "fill": "#fffbf9",
              "lineJoin": "round",
              "stroke": "#3b4044",
            },
            "type": "path",
          },
          {
            "attrs": {
              "fill": "#3b4044",
              "fontFamily": "Source Code Pro, sans-serif",
              "fontSize": 14,
              "fontStyle": "normal",
              "fontWeight": "normal",
              "text": "ISA",
              "textAlign": "center",
              "textBaseline": "middle",
            },
            "class": "er__relationship-label",
            "type": "text",
          },
          {
            "attrs": {
              "fill": "#3b4044",
              "fontFamily": "Source Code Pro, sans-serif",
              "fontSize": 14,
              "fontStyle": "normal",
              "fontWeight": "normal",
              "text": "ISA",
              "textAlign": "center",
              "textBaseline": "middle",
            },
            "class": "er__relationship-label",
            "type": "text",
          },
          {
            "attrs": {
              "lineJoin": "round",
              "stroke": "#3b4044",
            },
            "type": "path",
          },
          {
            "attrs": {
              "lineJoin": "round",
              "stroke": "#3b4044",
            },
            "type": "path",
          },
          {
            "attrs": {
              "lineJoin": "round",
              "stroke": "#3b4044",
            },
            "type": "path",
          },
          {
            "attrs": {
              "lineJoin": "round",
              "stroke": "#3b4044",
            },
            "type": "path",
          },
        ],
        "type": "group",
      },
    ],
    "type": "group",
  },
}
`;
